--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <div class="footer-form">
           <form>
             <label class="soc-media-item footer-subscribe">
-              <p class="soc-media-item footer-subscribe">Subscribe</p>
+              <span class="soc-media-item footer-subscribe">Subscribe</span>
               <input
                 type="text"
                 name="email"
@@ -526,30 +526,30 @@
         <form name="feedback_form" autocomplete="off">
           <label class="input-label">
             <span class="label-text">Name</span>
-            <div class="input-group">
+            <span class="input-group">
               <input class="input-group__input" name="userName" />
               <svg class="input-group__icon" width="18px" height="18px">
                 <use href="/images/icons.svg#person"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="input-label">
             <span class="label-text">Phone</span>
-            <div class="input-group">
+            <span class="input-group">
               <input type="tel" class="input-group__input" name="phone" />
               <svg class="input-group__icon" width="18px" height="24px">
                 <use href="/images/icons.svg#phone"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="input-label">
             <span class="label-text">Email</span>
-            <div class="input-group">
+            <span class="input-group">
               <input type="email" class="input-group__input" name="email" />
               <svg class="input-group__icon" width="18px" height="24px">
                 <use href="/images/icons.svg#email"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="input-label">
             <span class="label-text">Comment</span>
@@ -566,11 +566,11 @@
               name="privacyPolicy"
               value="privacy-policy"
             />
-            <div class="checkbox-wrapper">
+            <span class="checkbox-wrapper">
               <svg class="checkbox-icon" width="16" height="16">
                 <use href="/images/icons.svg#check"></use>
               </svg>
-            </div>
+            </span>
             <span class="label-text privacy-policy__text"
               >I accept the terms and conditions of the
               <a href="" class="privacy-policy">Privacy Policy</a>
@@ -581,6 +581,6 @@
       </div>
     </div>
 
-    <script src="./js/modal.js" />
+    <script src="./js/modal.js"></script>
   </body>
 </html>
