--- a/index.html
+++ b/index.html
@@ -490,24 +490,25 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form>
-            <label class="soc-media-item footer-subscribe">
-              <span class="soc-media-item footer-subscribe">Subscribe</span>
+        <div class="footer-subscribe-wrapper">
+          <p class="soc-media-item footer-subscribe">Subscribe</p>
+          <form class="footer-form">
+              <label class="soc-media-item footer-subscribe"></label>
               <input
-                type="text"
+                type="email"
                 name="email"
                 placeholder="E-mail"
                 class="footer-input"
               />
             </label>
-          </form>
+          
           <button type="submit" class="form-button button">
             Subscribe
             <svg class="footer-telegram" width="24" height="24">
               <use href="/images/icons.svg#telegram"></use>
             </svg>
           </button>
+        </form>
         </div>
       </div>
     </footer>
