--- a/index.html
+++ b/index.html
@@ -493,15 +493,14 @@
         <div class="footer-subscribe-wrapper">
           <p class="soc-media-item footer-subscribe">Subscribe</p>
           <form class="footer-form">
-              <label class="soc-media-item footer-subscribe"></label>
+              <label class="soc-media-item footer-subscribe">
               <input
                 type="email"
                 name="email"
                 placeholder="E-mail"
                 class="footer-input"
               />
-            </label>
-          
+          </label>
           <button type="submit" class="form-button button">
             Subscribe
             <svg class="footer-telegram" width="24" height="24">
