--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <div class="footer-subscribe-wrapper">
           <p class="soc-media-item footer-subscribe">Subscribe</p>
           <form class="footer-form">
-              <label class="soc-media-item footer-subscribe">
+              <label class="footer-subscribe">
               <input
                 type="email"
                 name="email"
@@ -504,7 +504,7 @@
           <button type="submit" class="form-button button">
             Subscribe
             <svg class="footer-telegram" width="24" height="24">
-              <use href="/images/icons.svg#telegram"></use>
+              <use href="./images/icons.svg#telegram"></use>
             </svg>
           </button>
         </form>
