--- a/index.html
+++ b/index.html
@@ -493,21 +493,21 @@
         <div class="footer-subscribe-wrapper">
           <p class="soc-media-item footer-subscribe">Subscribe</p>
           <form class="footer-form">
-              <label class="footer-subscribe">
+            <label class="footer-subscribe">
               <input
                 type="email"
                 name="email"
                 placeholder="E-mail"
                 class="footer-input"
               />
-          </label>
-          <button type="submit" class="form-button button">
-            Subscribe
-            <svg class="footer-telegram" width="24" height="24">
-              <use href="./images/icons.svg#telegram"></use>
-            </svg>
-          </button>
-        </form>
+            </label>
+            <button type="submit" class="form-button button">
+              Subscribe
+              <svg class="footer-telegram" width="24" height="24">
+                <use href="./images/icons.svg#telegram"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
@@ -517,40 +517,46 @@
       <div class="modal-container">
         <button data-modal-close type="button" class="modal-close">
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="/images/icons.svg#close"></use>
+            <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
         <p class="modal__title">
           Leave your contacts and we will call you back
         </p>
         <form name="feedback_form" autocomplete="off">
-          <label class="input-label">
-            <span class="label-text">Name</span>
-            <span class="input-group">
-              <input class="input-group__input" name="userName" />
-              <svg class="input-group__icon" width="18px" height="18px">
-                <use href="/images/icons.svg#person"></use>
-              </svg>
-            </span>
-          </label>
-          <label class="input-label">
-            <span class="label-text">Phone</span>
-            <span class="input-group">
-              <input type="tel" class="input-group__input" name="phone" />
-              <svg class="input-group__icon" width="18px" height="24px">
-                <use href="/images/icons.svg#phone"></use>
-              </svg>
-            </span>
-          </label>
-          <label class="input-label">
-            <span class="label-text">Email</span>
-            <span class="input-group">
-              <input type="email" class="input-group__input" name="email" />
-              <svg class="input-group__icon" width="18px" height="24px">
-                <use href="/images/icons.svg#email"></use>
-              </svg>
-            </span>
-          </label>
+          <div class="input-wrapper">
+            <label class="input-label">
+              <span class="label-text">Name</span>
+              <span class="input-group">
+                <input class="input-group__input" name="userName" />
+                <svg class="input-group__icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#person"></use>
+                </svg>
+              </span>
+            </label>
+          </div>
+          <div class="input-wrapper">
+            <label class="input-label">
+              <span class="label-text">Phone</span>
+              <span class="input-group">
+                <input type="tel" class="input-group__input" name="phone" />
+                <svg class="input-group__icon" width="18px" height="24px">
+                  <use href="./images/icons.svg#phone"></use>
+                </svg>
+              </span>
+            </label>
+          </div>
+          <div class="input-wrapper">
+            <label class="input-label">
+              <span class="label-text">Email</span>
+              <span class="input-group">
+                <input type="email" class="input-group__input" name="email" />
+                <svg class="input-group__icon" width="18px" height="24px">
+                  <use href="./images/icons.svg#email"></use>
+                </svg>
+              </span>
+            </label>
+          </div>
           <label class="input-label">
             <span class="label-text">Comment</span>
             <textarea
@@ -568,7 +574,7 @@
             />
             <span class="checkbox-wrapper">
               <svg class="checkbox-icon" width="16" height="16">
-                <use href="/images/icons.svg#check"></use>
+                <use href="./images/icons.svg#check"></use>
               </svg>
             </span>
             <span class="label-text privacy-policy__text"
