--- a/index.html
+++ b/index.html
@@ -525,46 +525,40 @@
         </p>
         <form name="feedback_form" autocomplete="off">
           <div class="input-wrapper">
-            <label class="input-label">
-              <span class="label-text">Name</span>
-              <span class="input-group">
-                <input class="input-group__input" name="userName" />
-                <svg class="input-group__icon" width="18px" height="18px">
-                  <use href="./images/icons.svg#person"></use>
-                </svg>
-              </span>
-            </label>
+            <label class="label-text"> Name </label>
+            <div class="input-group">
+              <input class="input-group__input" name="userName" />
+              <svg class="input-group__icon" width="18px" height="18px">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
           </div>
           <div class="input-wrapper">
-            <label class="input-label">
-              <span class="label-text">Phone</span>
-              <span class="input-group">
-                <input type="tel" class="input-group__input" name="phone" />
-                <svg class="input-group__icon" width="18px" height="24px">
-                  <use href="./images/icons.svg#phone"></use>
-                </svg>
-              </span>
-            </label>
+            <label class="label-text"> Phone </label>
+            <div class="input-group">
+              <input type="tel" class="input-group__input" name="phone" />
+              <svg class="input-group__icon" width="18px" height="24px">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="input-wrapper">
-            <label class="input-label">
-              <span class="label-text">Email</span>
-              <span class="input-group">
-                <input type="email" class="input-group__input" name="email" />
-                <svg class="input-group__icon" width="18px" height="24px">
-                  <use href="./images/icons.svg#email"></use>
-                </svg>
-              </span>
-            </label>
+            <label class="label-text"> Email</label>
+            <div class="input-group">
+              <input type="email" class="input-group__input" name="email" />
+              <svg class="input-group__icon" width="18px" height="24px">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
           </div>
-          <label class="input-label">
-            <span class="label-text">Comment</span>
+          <label  class="label-text">
+            Comment </label>
             <textarea
               name="comment"
               placeholder="Text input"
               class="textarea-form"
             ></textarea>
-          </label>
+          
           <label class="checkbox-label">
             <input
               type="checkbox"
