--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
         </p>
         <form name="feedback_form" autocomplete="off">
           <div class="input-wrapper">
-            <label class="label-text"> Name </label>
+            <label class="label-text" for="user-name"> Name </label>
             <div class="input-group">
-              <input class="input-group__input" name="userName" />
-              <svg class="input-group__icon" width="18px" height="18px">
+              <input class="input-group__input" name="user-name" id="user-name"  type="text" />
+              <svg class="input-group__icon" width="18" height="18">
                 <use href="./images/icons.svg#person"></use>
               </svg>
             </div>
@@ -536,8 +536,8 @@
           <div class="input-wrapper">
             <label class="label-text"> Phone </label>
             <div class="input-group">
-              <input type="tel" class="input-group__input" name="phone" />
-              <svg class="input-group__icon" width="18px" height="24px">
+              <input class="input-group__input" type="tel" name="phone" />
+              <svg class="input-group__icon" width="18" height="24">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
             </div>
@@ -545,26 +545,26 @@
           <div class="input-wrapper">
             <label class="label-text"> Email</label>
             <div class="input-group">
-              <input type="email" class="input-group__input" name="email" />
-              <svg class="input-group__icon" width="18px" height="24px">
+              <input  class="input-group__input" type="email" name="email" />
+              <svg class="input-group__icon" width="18" height="24">
                 <use href="./images/icons.svg#email"></use>
               </svg>
             </div>
           </div>
-          <label  class="label-text">
-            Comment </label>
+          <div class="comment-wrapper"><label class="label-text" for="user-comment"> Comment </label>
             <textarea
               name="comment"
               placeholder="Text input"
               class="textarea-form"
+              id="user-comment"
             ></textarea>
-          
-          <label class="checkbox-label">
+  </div>
+          <div class="checkbox-container">
             <input
               type="checkbox"
               class="visually-hidden input-checkbox"
-              name="privacyPolicy"
-              value="privacy-policy"
+              name="user-privacy"
+              value="true"
             />
             <span class="checkbox-wrapper">
               <svg class="checkbox-icon" width="16" height="16">
@@ -572,10 +572,11 @@
               </svg>
             </span>
             <span class="label-text privacy-policy__text"
-              >I accept the terms and conditions of the
+              ><label class="checkbox-label" for="user-privacy">I accept the terms and conditions of the
               <a href="" class="privacy-policy">Privacy Policy</a>
             </span>
-          </label>
+          </label></div>
+          
           <button type="submit" class="button send-button">Send</button>
         </form>
       </div>
