--- a/index.html
+++ b/index.html
@@ -573,9 +573,9 @@
             </span>
             <span class="label-text privacy-policy__text"
               ><label class="checkbox-label" for="user-privacy">I accept the terms and conditions of the
-              <a href="" class="privacy-policy">Privacy Policy</a>
+              <a href="" class="privacy-policy">Privacy Policy</a></label>
             </span>
-          </label></div>
+          </div>
           
           <button type="submit" class="button send-button">Send</button>
         </form>
