--- a/index.html
+++ b/index.html
@@ -527,7 +527,12 @@
           <div class="input-wrapper">
             <label class="label-text" for="user-name"> Name </label>
             <div class="input-group">
-              <input class="input-group__input" name="user-name" id="user-name"  type="text" />
+              <input
+                class="input-group__input"
+                name="user-name"
+                id="user-name"
+                type="text"
+              />
               <svg class="input-group__icon" width="18" height="18">
                 <use href="./images/icons.svg#person"></use>
               </svg>
@@ -545,38 +550,41 @@
           <div class="input-wrapper">
             <label class="label-text"> Email</label>
             <div class="input-group">
-              <input  class="input-group__input" type="email" name="email" />
+              <input class="input-group__input" type="email" name="email" />
               <svg class="input-group__icon" width="18" height="24">
                 <use href="./images/icons.svg#email"></use>
               </svg>
             </div>
           </div>
-          <div class="comment-wrapper"><label class="label-text" for="user-comment"> Comment </label>
+          <div class="comment-wrapper">
+            <label class="label-text" for="user-comment"> Comment </label>
             <textarea
               name="comment"
               placeholder="Text input"
               class="textarea-form"
               id="user-comment"
             ></textarea>
-  </div>
+          </div>
           <div class="checkbox-container">
             <input
               type="checkbox"
               class="visually-hidden input-checkbox"
-              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <span class="checkbox-wrapper">
-              <svg class="checkbox-icon" width="16" height="16">
-                <use href="./images/icons.svg#check"></use>
-              </svg>
-            </span>
-            <span class="label-text privacy-policy__text"
-              ><label class="checkbox-label" for="user-privacy">I accept the terms and conditions of the
-              <a href="" class="privacy-policy">Privacy Policy</a></label>
-            </span>
+            <label class="checkbox-label" for="user-privacy">
+              <span class="checkbox-wrapper">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#check"></use>
+                </svg>
+              </span>
+              <span class="label-text privacy-policy__text">
+                I accept the terms and conditions of the
+                <a href="" class="privacy-policy">Privacy Policy</a>
+              </span>
+            </label>
           </div>
-          
+
           <button type="submit" class="button send-button">Send</button>
         </form>
       </div>
