--- a/index.html
+++ b/index.html
@@ -533,13 +533,13 @@
                 id="user-name"
                 type="text"
               />
-              <svg class="input-group__icon" width="18" height="18">
+              <svg class="input-group__icon" width="18" height="24">
                 <use href="./images/icons.svg#person"></use>
               </svg>
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="label-text"> Phone </label>
+            <label class="label-text">Phone</label>
             <div class="input-group">
               <input class="input-group__input" type="tel" name="phone" />
               <svg class="input-group__icon" width="18" height="24">
@@ -548,7 +548,7 @@
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="label-text"> Email</label>
+            <label class="label-text">Email</label>
             <div class="input-group">
               <input class="input-group__input" type="email" name="email" />
               <svg class="input-group__icon" width="18" height="24">
@@ -557,9 +557,9 @@
             </div>
           </div>
           <div class="comment-wrapper">
-            <label class="label-text" for="user-comment"> Comment </label>
+            <label class="label-text" for="user-comment">Comment</label>
             <textarea
-              name="comment"
+            name="user-comment"
               placeholder="Text input"
               class="textarea-form"
               id="user-comment"
@@ -570,6 +570,7 @@
               type="checkbox"
               class="visually-hidden input-checkbox"
               id="user-privacy"
+              name="user-privacy"
               value="true"
             />
             <label class="checkbox-label" for="user-privacy">
@@ -578,9 +579,7 @@
                   <use href="./images/icons.svg#check"></use>
                 </svg>
               </span>
-              <span class="label-text privacy-policy__text">
                 I accept the terms and conditions of the
-              </span>
               <a href="" class="privacy-policy">Privacy Policy</a>
             </label>
           </div>
