--- a/index.html
+++ b/index.html
@@ -539,18 +539,18 @@
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="label-text">Phone</label>
+            <label for="user-phone" class="label-text">Phone</label>
             <div class="input-group">
-              <input class="input-group__input" type="tel" name="phone" />
+              <input class="input-group__input" type="tel" id="user-phone" name="user-phone" />
               <svg class="input-group__icon" width="18" height="24">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="label-text">Email</label>
+            <label for="user-email" class="label-text">Email</label>
             <div class="input-group">
-              <input class="input-group__input" type="email" name="email" />
+              <input class="input-group__input" id="user-email" type="email" name="user-email" />
               <svg class="input-group__icon" width="18" height="24">
                 <use href="./images/icons.svg#email"></use>
               </svg>
